# AdventOfCode2025

./: Cargo.toml  README.md
src/: errors.rs  forklift.rs  grid.rs  lib.rs  math.rs  point.rs  range.rs  safe.rs
