[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.2"

[profile.release]
debug = true

[[bin]]
name = "01a"
path = "src/bin/01/a.rs"

[[bin]]
name = "01b"
path = "src/bin/01/b.rs"

[[bin]]
name = "02a"
path = "src/bin/02/a.rs"

[[bin]]
name = "02b"
path = "src/bin/02/b.rs"
