[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.2"

[profile.release]
debug = true

[[bin]]
name = "01a"
path = "src/bin/01/a.rs"

[[bin]]
name = "01b"
path = "src/bin/01/b.rs"

[[bin]]
name = "02a"
path = "src/bin/02/a.rs"

[[bin]]
name = "02b"
path = "src/bin/02/b.rs"

[[bin]]
name = "03a"
path = "src/bin/03/a.rs"

[[bin]]
name = "03b"
path = "src/bin/03/b.rs"

[[bin]]
name = "04a"
path = "src/bin/04/a.rs"

[[bin]]
name = "04b"
path = "src/bin/04/b.rs"

[[bin]]
name = "05a"
path = "src/bin/05/a.rs"

[[bin]]
name = "05b"
path = "src/bin/05/b.rs"

[[bin]]
name = "06a"
path = "src/bin/06/a.rs"

[[bin]]
name = "06b"
path = "src/bin/06/b.rs"
